# MyProjects

./: .gitignore  README.md  requirements.txt
DSA/Java/: README.md
DataStructuresAndAlgorithms/Algorithms/: List_of_all_DSA.ipynb  O_Omega_Theta_notations.ipynb  all_divisor_of_a_number.ipynb  analysis_of_common_loops.ipynb  analysis_of_recursion.ipynb  analysis_of_space_complexity.ipynb  asymtotics_analysis.ipynb  factorials.ipynb  fibonacci.ipynb  iterative_approach.ipynb  math.ipynb  math_gcd.ipynb  math_lcm.ipynb  optimized_solutions.ipynb  palindrome.ipynb  prime_number.ipynb  recursive_approach.ipynb  which_algo_is_better.ipynb
DataStructuresAndAlgorithms/DataStructures/: datastructures.md
DataStructuresAndAlgorithms/LeetCodeAlgorithm/: README.md
MoneyMakingTime/: services.md  simpleLogic.md
PlayTime/caching_projects/: duplicate_check_mongodb.py  duplicate_check_postgres.py  server_side_caching_redis_postgres.py
PlayTime/graphql_vs_restapi/: graphql_vs_restapi.md
PlayTime/kafka_kafdrop_ui_project/: Dockerfile  docker-compose.yml
PlayTime/kubernetes_project/: mongodb.py  requirements.txt
PlayTime/python_authentications/: client_oauth1_authentication.py  mix_authentication.py  server_bearer_token_authentication.py  server_digest_authentication.py  server_jwt_token_authentication.py  time_based_otp_authentication.py
QuickCommands/: curl.md  docker.md  git.md  kubernetes.md
StudyTime/: README.md  courses.md  exams.md  github_repos.md  interviews.md  youtube_videos.md
StudyTime/Tutorials/Python/modules_packages/create_package/important_files/: CHANGELOG.rst  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
StudyTime/Tutorials/Python/modules_packages/create_package/important_files/requirements/tools/: test.txt
YouShouldKnow/: etl_pipeline_fundamentals.md  inbound_vs_outbound.md
quick_commands/: bash.md  linux.md  markdown.md  podman.md
(+944 files in other folders)
