[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "your_package_name"
version = "0.1.0"
author = "Your Name"
author_email = "your.email@example.com"
description = "A short description of the project."
long_description = file: README.md
long_description_content_type = "text/markdown"
url = "https://github.com/yourusername/your_package_name"
project_urls = {
    "Bug Tracker": "https://github.com/yourusername/your_package_name/issues"
}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = "example, sample, package"
packages = find:
install_requires = [
    "numpy>=1.19.2",
    "requests>=2.24.0"
]
python_requires = ">=3.6"

[tool.setuptools.scripts]
your-command = 'your_package.module:function'

[tool.setuptools.extras_require]
dev = ["check-manifest", "build", "twine"]
test = ["pytest", "pytest-cov"]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
