[metadata]
name = <name-of-project> # for example pandas
description = Some short description
long_description = file: README.md
version = <current_version>
author = <author>
author_email = <author_email>
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8, <=3.12.3
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy
    boto3
    sameas
    we
    write
    in
    requirements.txt
    but no need to add in requirements.txt

[options.packages.find]
where = src
